--- a/P8105_hw3_qx2222.md
+++ b/P8105_hw3_qx2222.md
@@ -3,24 +3,9 @@ P8105_hw3_qx2222
 Qiaoyi Xu
 2022-10-12
 
-``` r
-library(tidyverse)
-```
+### Problem 1(answer posted)
 
-    ## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──
-    ## ✔ ggplot2 3.3.6      ✔ purrr   0.3.4 
-    ## ✔ tibble  3.1.8      ✔ dplyr   1.0.10
-    ## ✔ tidyr   1.2.0      ✔ stringr 1.4.1 
-    ## ✔ readr   2.1.2      ✔ forcats 0.5.2 
-    ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
-    ## ✖ dplyr::filter() masks stats::filter()
-    ## ✖ dplyr::lag()    masks stats::lag()
-
-``` r
-library(ggplot2)
-```
-
-### Problem 1
+\##my answer:
 
 ``` r
 library(p8105.datasets)
@@ -36,7 +21,7 @@ limiting this to aisles with more than 10000 items ordered. Arrange
 aisles sensibly, and organize your plot so others can read it.
 
 ``` r
-instacart %>%
+instacart %>% 
   group_by(aisle)%>%
   summarise(n_each_aisle = n()) %>%
   filter(n_each_aisle >= 10000) %>%
@@ -55,12 +40,201 @@ instacart %>%
   theme(axis.text.x = element_text(face="bold", color="#993333", size=6, angle=45))
 ```
 
-![](P8105_hw3_qx2222_files/figure-gfm/unnamed-chunk-2-1.png)<!-- -->
+<img src="P8105_hw3_qx2222_files/figure-gfm/unnamed-chunk-2-1.png" width="90%" />
 
-Make a table showing the three most popular items in each of the aisles
-“baking ingredients”, “dog food care”, and “packaged vegetables fruits”.
-Include the number of times each item is ordered in your table.
+\##answer:
 
-Make a table showing the mean hour of the day at which Pink Lady Apples
-and Coffee Ice Cream are ordered on each day of the week; format this
-table for human readers (i.e. produce a 2 x 7 table).
+#### Read in the data
+
+``` r
+instacart = 
+  instacart %>% 
+  as_tibble(instacart)
+```
+
+#### Answer questions about the data
+
+This dataset contains 1384617 rows and 15 columns, with each row
+resprenting a single product from an instacart order. Variables include
+identifiers for user, order, and product; the order in which each
+product was added to the cart. There are several order-level variables,
+describing the day and time of the order, and number of days since prior
+order. Then there are several item-specific variables, describing the
+product name (e.g. Yogurt, Avocado), department (e.g. dairy and eggs,
+produce), and aisle (e.g. yogurt, fresh fruits), and whether the item
+has been ordered by this user in the past. In total, there are 39123
+products found in 131209 orders from 131209 distinct users.
+
+Below is a table summarizing the number of items ordered from aisle. In
+total, there are 134 aisles, with fresh vegetables and fresh fruits
+holding the most items ordered by far.
+
+``` r
+instacart %>% 
+  count(aisle) %>% 
+  arrange(desc(n))
+```
+
+    ## # A tibble: 134 × 2
+    ##    aisle                              n
+    ##    <chr>                          <int>
+    ##  1 fresh vegetables              150609
+    ##  2 fresh fruits                  150473
+    ##  3 packaged vegetables fruits     78493
+    ##  4 yogurt                         55240
+    ##  5 packaged cheese                41699
+    ##  6 water seltzer sparkling water  36617
+    ##  7 milk                           32644
+    ##  8 chips pretzels                 31269
+    ##  9 soy lactosefree                26240
+    ## 10 bread                          23635
+    ## # … with 124 more rows
+
+Next is a plot that shows the number of items ordered in each aisle.
+Here, aisles are ordered by ascending number of items.
+
+``` r
+instacart %>% 
+  count(aisle) %>% 
+  filter(n > 10000) %>% 
+  mutate(aisle = fct_reorder(aisle, n)) %>% 
+  ggplot(aes(x = aisle, y = n)) + 
+  geom_point() + 
+  labs(title = "Number of items ordered in each aisle") +
+  theme(axis.text.x = element_text(angle = 60, hjust = 1))
+```
+
+<img src="P8105_hw3_qx2222_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
+
+Our next table shows the three most popular items in aisles
+`baking ingredients`, `dog food care`, and `packaged vegetables fruits`,
+and includes the number of times each item is ordered in your table.
+
+``` r
+instacart %>% 
+  filter(aisle %in% c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>%
+  group_by(aisle) %>% 
+  count(product_name) %>% 
+  mutate(rank = min_rank(desc(n))) %>% 
+  filter(rank < 4) %>% 
+  arrange(desc(n)) %>%
+  knitr::kable()
+```
+
+| aisle                      | product_name                                  |    n | rank |
+|:---------------------------|:----------------------------------------------|-----:|-----:|
+| packaged vegetables fruits | Organic Baby Spinach                          | 9784 |    1 |
+| packaged vegetables fruits | Organic Raspberries                           | 5546 |    2 |
+| packaged vegetables fruits | Organic Blueberries                           | 4966 |    3 |
+| baking ingredients         | Light Brown Sugar                             |  499 |    1 |
+| baking ingredients         | Pure Baking Soda                              |  387 |    2 |
+| baking ingredients         | Cane Sugar                                    |  336 |    3 |
+| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |   30 |    1 |
+| dog food care              | Organix Chicken & Brown Rice Recipe           |   28 |    2 |
+| dog food care              | Small Dog Biscuits                            |   26 |    3 |
+
+Finally is a table showing the mean hour of the day at which Pink Lady
+Apples and Coffee Ice Cream are ordered on each day of the week. This
+table has been formatted in an untidy manner for human readers. Pink
+Lady Apples are generally purchased slightly earlier in the day than
+Coffee Ice Cream, with the exception of day 5.
+
+``` r
+instacart %>%
+  filter(product_name %in% c("Pink Lady Apples", "Coffee Ice Cream")) %>%
+  group_by(product_name, order_dow) %>%
+  summarize(mean_hour = mean(order_hour_of_day)) %>%
+  spread(key = order_dow, value = mean_hour) %>%
+  knitr::kable(digits = 2)
+```
+
+    ## `summarise()` has grouped output by 'product_name'. You can override using the
+    ## `.groups` argument.
+
+| product_name     |     0 |     1 |     2 |     3 |     4 |     5 |     6 |
+|:-----------------|------:|------:|------:|------:|------:|------:|------:|
+| Coffee Ice Cream | 13.77 | 14.32 | 15.38 | 15.32 | 15.22 | 12.26 | 13.83 |
+| Pink Lady Apples | 13.44 | 11.36 | 11.70 | 14.25 | 11.55 | 12.78 | 11.94 |
+
+### Problem 2
+
+Load, tidy, and otherwise wrangle the data. Your final dataset should
+include all originally observed variables and values; have useful
+variable names;
+
+include a weekday vs weekend variable; and encode data with reasonable
+variable classes. Describe the resulting dataset (e.g. what variables
+exist, how many observations, etc).
+
+``` r
+accel_data = read_csv("data/accel_data.csv") %>%
+  janitor::clean_names() %>%
+  pivot_longer(cols = "activity_1":"activity_1440", names_to = "time", values_to = "activities" )%>%
+  separate(time, c("repeatedword","minute"), sep = "_") %>%
+  select(-repeatedword) %>%
+  arrange(minute) %>%
+  mutate(minute = as.integer(minute)) %>%
+  mutate(weekday_or_weekend = if_else(day %in% c("Saturday", "Sunday"), "weekend", "weekday" )) %>%
+  mutate(weekday_or_weekend = factor(weekday_or_weekend))
+```
+
+    ## Rows: 35 Columns: 1443
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr    (1): day
+    ## dbl (1442): week, day_id, activity.1, activity.2, activity.3, activity.4, ac...
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+accel_data
+```
+
+    ## # A tibble: 50,400 × 6
+    ##     week day_id day       minute activities weekday_or_weekend
+    ##    <dbl>  <dbl> <chr>      <int>      <dbl> <fct>             
+    ##  1     1      1 Friday         1       88.4 weekday           
+    ##  2     1      2 Monday         1        1   weekday           
+    ##  3     1      3 Saturday       1        1   weekend           
+    ##  4     1      4 Sunday         1        1   weekend           
+    ##  5     1      5 Thursday       1       47.4 weekday           
+    ##  6     1      6 Tuesday        1       64.8 weekday           
+    ##  7     1      7 Wednesday      1       71.1 weekday           
+    ##  8     2      8 Friday         1      675   weekday           
+    ##  9     2      9 Monday         1      291   weekday           
+    ## 10     2     10 Saturday       1       64   weekend           
+    ## # … with 50,390 more rows
+
+Using your tidied dataset, aggregate across minutes to create a total
+activity variable for each day, and create a table showing these totals.
+Are any trends apparent?
+
+``` r
+totals_table = 
+  accel_data %>% group_by(week, day) %>%
+  summarize(total = sum(activities))
+```
+
+    ## `summarise()` has grouped output by 'week'. You can override using the
+    ## `.groups` argument.
+
+``` r
+totals_table
+```
+
+    ## # A tibble: 35 × 3
+    ## # Groups:   week [5]
+    ##     week day         total
+    ##    <dbl> <chr>       <dbl>
+    ##  1     1 Friday    480543.
+    ##  2     1 Monday     78828.
+    ##  3     1 Saturday  376254 
+    ##  4     1 Sunday    631105 
+    ##  5     1 Thursday  355924.
+    ##  6     1 Tuesday   307094.
+    ##  7     1 Wednesday 340115.
+    ##  8     2 Friday    568839 
+    ##  9     2 Monday    295431 
+    ## 10     2 Saturday  607175 
+    ## # … with 25 more rows
