--- a/P8105_hw3_qx2222.md
+++ b/P8105_hw3_qx2222.md
@@ -158,13 +158,11 @@ instacart %>%
 
 ### Problem 2
 
-Load, tidy, and otherwise wrangle the data. Your final dataset should
-include all originally observed variables and values; have useful
-variable names;
-
-include a weekday vs weekend variable; and encode data with reasonable
-variable classes. Describe the resulting dataset (e.g. what variables
-exist, how many observations, etc).
+1.  Load, tidy, and otherwise wrangle the data. Your final dataset
+    should include all originally observed variables and values; have
+    useful variable names; include a weekday vs weekend variable; and
+    encode data with reasonable variable classes. Describe the resulting
+    dataset (e.g. what variables exist, how many observations, etc).
 
 ``` r
 accel_data = read_csv("data/accel_data.csv") %>%
@@ -172,10 +170,11 @@ accel_data = read_csv("data/accel_data.csv") %>%
   pivot_longer(cols = "activity_1":"activity_1440", names_to = "time", values_to = "activities" )%>%
   separate(time, c("repeatedword","minute"), sep = "_") %>%
   select(-repeatedword) %>%
-  arrange(minute) %>%
+  arrange(week, day) %>%
   mutate(minute = as.integer(minute)) %>%
   mutate(weekday_or_weekend = if_else(day %in% c("Saturday", "Sunday"), "weekend", "weekday" )) %>%
-  mutate(weekday_or_weekend = factor(weekday_or_weekend))
+  mutate(weekday_or_weekend = factor(weekday_or_weekend)) %>%
+  mutate(hour = minute/60) 
 ```
 
     ## Rows: 35 Columns: 1443
@@ -191,50 +190,80 @@ accel_data = read_csv("data/accel_data.csv") %>%
 accel_data
 ```
 
-    ## # A tibble: 50,400 × 6
-    ##     week day_id day       minute activities weekday_or_weekend
-    ##    <dbl>  <dbl> <chr>      <int>      <dbl> <fct>             
-    ##  1     1      1 Friday         1       88.4 weekday           
-    ##  2     1      2 Monday         1        1   weekday           
-    ##  3     1      3 Saturday       1        1   weekend           
-    ##  4     1      4 Sunday         1        1   weekend           
-    ##  5     1      5 Thursday       1       47.4 weekday           
-    ##  6     1      6 Tuesday        1       64.8 weekday           
-    ##  7     1      7 Wednesday      1       71.1 weekday           
-    ##  8     2      8 Friday         1      675   weekday           
-    ##  9     2      9 Monday         1      291   weekday           
-    ## 10     2     10 Saturday       1       64   weekend           
+    ## # A tibble: 50,400 × 7
+    ##     week day_id day    minute activities weekday_or_weekend   hour
+    ##    <dbl>  <dbl> <chr>   <int>      <dbl> <fct>               <dbl>
+    ##  1     1      1 Friday      1       88.4 weekday            0.0167
+    ##  2     1      1 Friday      2       82.2 weekday            0.0333
+    ##  3     1      1 Friday      3       64.4 weekday            0.05  
+    ##  4     1      1 Friday      4       70.0 weekday            0.0667
+    ##  5     1      1 Friday      5       75.0 weekday            0.0833
+    ##  6     1      1 Friday      6       66.3 weekday            0.1   
+    ##  7     1      1 Friday      7       53.8 weekday            0.117 
+    ##  8     1      1 Friday      8       47.8 weekday            0.133 
+    ##  9     1      1 Friday      9       55.5 weekday            0.15  
+    ## 10     1      1 Friday     10       43.0 weekday            0.167 
     ## # … with 50,390 more rows
 
-Using your tidied dataset, aggregate across minutes to create a total
-activity variable for each day, and create a table showing these totals.
-Are any trends apparent?
+2.  Using your tidied dataset, aggregate across minutes to create a
+    total activity variable for each day, and create a table showing
+    these totals. Are any trends apparent?
 
 ``` r
-totals_table = 
-  accel_data %>% group_by(week, day) %>%
-  summarize(total = sum(activities))
-```
+totals_table  = accel_data %>% group_by(day_id) %>%
+  mutate(total = sum(activities)) %>%
+  distinct(week,day,total, weekday_or_weekend) 
 
-    ## `summarise()` has grouped output by 'week'. You can override using the
-    ## `.groups` argument.
-
-``` r
 totals_table
 ```
 
-    ## # A tibble: 35 × 3
-    ## # Groups:   week [5]
-    ##     week day         total
-    ##    <dbl> <chr>       <dbl>
-    ##  1     1 Friday    480543.
-    ##  2     1 Monday     78828.
-    ##  3     1 Saturday  376254 
-    ##  4     1 Sunday    631105 
-    ##  5     1 Thursday  355924.
-    ##  6     1 Tuesday   307094.
-    ##  7     1 Wednesday 340115.
-    ##  8     2 Friday    568839 
-    ##  9     2 Monday    295431 
-    ## 10     2 Saturday  607175 
+    ## # A tibble: 35 × 5
+    ## # Groups:   day_id [35]
+    ##     week day_id day       weekday_or_weekend   total
+    ##    <dbl>  <dbl> <chr>     <fct>                <dbl>
+    ##  1     1      1 Friday    weekday            480543.
+    ##  2     1      2 Monday    weekday             78828.
+    ##  3     1      3 Saturday  weekend            376254 
+    ##  4     1      4 Sunday    weekend            631105 
+    ##  5     1      5 Thursday  weekday            355924.
+    ##  6     1      6 Tuesday   weekday            307094.
+    ##  7     1      7 Wednesday weekday            340115.
+    ##  8     2      8 Friday    weekday            568839 
+    ##  9     2      9 Monday    weekday            295431 
+    ## 10     2     10 Saturday  weekend            607175 
     ## # … with 25 more rows
+
+``` r
+totals_table %>%
+  ggplot(aes(x = day_id, y = total, color = weekday_or_weekend )) + 
+  geom_point() +
+  labs(x = "Day_id", y = "total activities", title = "Total number of activities each day", 
+       color = "weekday/weekend") +
+  geom_smooth(se = FALSE)
+```
+
+    ## `geom_smooth()` using method = 'loess' and formula 'y ~ x'
+
+<img src="P8105_hw3_qx2222_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
+
+3.  Accelerometer data allows the inspection activity over the course of
+    the day. Make a single-panel plot that shows the 24-hour activity
+    time courses for each day and use color to indicate day of the week.
+    Describe in words any patterns or conclusions you can make based on
+    this graph.
+
+``` r
+accel_data %>%
+  ggplot(aes(x = hour, y = activities, color = day)) +
+  geom_point() +
+  geom_line(alpha = .5) +
+  geom_smooth(aes(group = day), se = FALSE) +
+  labs(x = "Hour", y = "number of activities", title = "the 24-hour activity time courses for each day", 
+       color = "Day of week")
+```
+
+    ## `geom_smooth()` using method = 'gam' and formula 'y ~ s(x, bs = "cs")'
+
+<img src="P8105_hw3_qx2222_files/figure-gfm/unnamed-chunk-11-1.png" width="90%" />
+
+### Problem 3
