--- a/P8105_hw3_qx2222.md
+++ b/P8105_hw3_qx2222.md
@@ -267,3 +267,106 @@ accel_data %>%
 <img src="P8105_hw3_qx2222_files/figure-gfm/unnamed-chunk-11-1.png" width="90%" />
 
 ### Problem 3
+
+``` r
+#load data of problem 3
+library(p8105.datasets)
+data("ny_noaa")
+```
+
+To that end, write a short description of the dataset, noting the size
+and structure of the data, describing some key variables, and indicating
+the extent to which missing data is an issue. Then, do or answer the
+following (commenting on the results of each):
+
+1.  Do some data cleaning. Create separate variables for year, month,
+    and day. Ensure observations for temperature, precipitation, and
+    snowfall are given in reasonable units. For snowfall, what are the
+    most commonly observed values? Why?
+
+``` r
+clean_noaa = ny_noaa %>%
+  separate(date, c("year","month","day"), sep = "-") %>%
+  mutate(year = as.numeric(year),
+         month = as.numeric(month),
+         day = as.numeric(day),
+         tmax = as.numeric(tmax)/10,
+         tmin = as.numeric(tmin)/10,
+         prcp = as.numeric(prcp)/10)
+
+clean_noaa
+```
+
+    ## # A tibble: 2,595,176 × 9
+    ##    id           year month   day  prcp  snow  snwd  tmax  tmin
+    ##    <chr>       <dbl> <dbl> <dbl> <dbl> <int> <int> <dbl> <dbl>
+    ##  1 US1NYAB0001  2007    11     1    NA    NA    NA    NA    NA
+    ##  2 US1NYAB0001  2007    11     2    NA    NA    NA    NA    NA
+    ##  3 US1NYAB0001  2007    11     3    NA    NA    NA    NA    NA
+    ##  4 US1NYAB0001  2007    11     4    NA    NA    NA    NA    NA
+    ##  5 US1NYAB0001  2007    11     5    NA    NA    NA    NA    NA
+    ##  6 US1NYAB0001  2007    11     6    NA    NA    NA    NA    NA
+    ##  7 US1NYAB0001  2007    11     7    NA    NA    NA    NA    NA
+    ##  8 US1NYAB0001  2007    11     8    NA    NA    NA    NA    NA
+    ##  9 US1NYAB0001  2007    11     9    NA    NA    NA    NA    NA
+    ## 10 US1NYAB0001  2007    11    10    NA    NA    NA    NA    NA
+    ## # … with 2,595,166 more rows
+
+``` r
+snowball_values = ny_noaa %>%
+  group_by(snow) %>%
+  summarise(snowball_obs = n())%>%
+  arrange(desc(snowball_obs))
+
+snowball_values
+```
+
+    ## # A tibble: 282 × 2
+    ##     snow snowball_obs
+    ##    <int>        <int>
+    ##  1     0      2008508
+    ##  2    NA       381221
+    ##  3    25        31022
+    ##  4    13        23095
+    ##  5    51        18274
+    ##  6    76        10173
+    ##  7     8         9962
+    ##  8     5         9748
+    ##  9    38         9197
+    ## 10     3         8790
+    ## # … with 272 more rows
+
+2.  Make a two-panel plot showing the average max temperature in January
+    and in July in each station across years. Is there any observable /
+    interpretable structure? Any outliers?
+
+``` r
+clean_noaa %>%
+  mutate(month = month.name[month]) %>%
+  filter(month %in% c ("January", "July")) %>%
+  group_by(id,year,month) %>%
+  summarise(mean_tmax = mean(tmax, na.rm = T)) %>%
+  filter(!is.na(mean_tmax)) %>%#clean missing data
+  ggplot(aes(x = year, y = mean_tmax))+
+  geom_point() +
+  geom_smooth(se = FALSE) +
+  facet_grid(.~month) +
+  theme(panel.spacing = unit(1,"lines")) %>%
+  labs(x = "Year", y = "Average Max Temperature",
+       title = "the average max temperature in January and in July in each station")
+```
+
+    ## `summarise()` has grouped output by 'id', 'year'. You can override using the
+    ## `.groups` argument.
+    ## `geom_smooth()` using method = 'gam' and formula 'y ~ s(x, bs = "cs")'
+
+<img src="P8105_hw3_qx2222_files/figure-gfm/unnamed-chunk-15-1.png" width="90%" />
+
+3.  Make a two-panel plot showing
+
+<!-- -->
+
+1)  tmax vs tmin for the full dataset (note that a scatterplot may not
+    be the best option); and (ii) make a plot showing the distribution
+    of snowfall values greater than 0 and less than 100 separately by
+    year.
