--- a/P8105_hw3_qx2222.md
+++ b/P8105_hw3_qx2222.md
@@ -239,7 +239,10 @@ totals_table %>%
   geom_point() +
   labs(x = "Day_id", y = "total activities", title = "Total number of activities each day", 
        color = "weekday/weekend") +
-  geom_smooth(se = FALSE)
+  geom_smooth(se = FALSE) +
+  theme_minimal() +
+  theme(legend.position = "bottom",
+        legend.title = element_blank())
 ```
 
     ## `geom_smooth()` using method = 'loess' and formula 'y ~ x'
@@ -341,7 +344,7 @@ snowball_values
     interpretable structure? Any outliers?
 
 ``` r
-clean_noaa %>%
+average_maxtemp = clean_noaa %>%
   mutate(month = month.name[month]) %>%
   filter(month %in% c ("January", "July")) %>%
   group_by(id,year,month) %>%
@@ -358,6 +361,11 @@ clean_noaa %>%
 
     ## `summarise()` has grouped output by 'id', 'year'. You can override using the
     ## `.groups` argument.
+
+``` r
+average_maxtemp 
+```
+
     ## `geom_smooth()` using method = 'gam' and formula 'y ~ s(x, bs = "cs")'
 
 <img src="P8105_hw3_qx2222_files/figure-gfm/unnamed-chunk-15-1.png" width="90%" />
@@ -367,6 +375,21 @@ clean_noaa %>%
 <!-- -->
 
 1)  tmax vs tmin for the full dataset (note that a scatterplot may not
-    be the best option); and (ii) make a plot showing the distribution
-    of snowfall values greater than 0 and less than 100 separately by
-    year.
+    be the best option);
+
+``` r
+clean_noaa %>%
+  ggplot(aes(x = tmin, y = tmax))+
+  geom_hex() +
+  labs(x = "Minimum temperature (tenths of degrees C)", y = "Maximum temperature (tenths of degrees C)", 
+       title = "tmax vs tmin for the full dataset", fill = "counts") +
+  scale_x_continuous(n.breaks = 6) +
+  scale_fill_continuous(breaks = c(10000,30000,50000)) +
+  theme_minimal() +
+  theme(legend.position = "bottom")
+```
+
+<img src="P8105_hw3_qx2222_files/figure-gfm/unnamed-chunk-16-1.png" width="90%" />
+
+2)  make a plot showing the distribution of snowfall values greater than
+    0 and less than 100 separately by year.
