--- a/P8105_hw3_qx2222.md
+++ b/P8105_hw3_qx2222.md
@@ -378,7 +378,7 @@ average_maxtemp
     be the best option);
 
 ``` r
-clean_noaa %>%
+tmax_vs_tmin = clean_noaa %>%
   ggplot(aes(x = tmin, y = tmax))+
   geom_hex() +
   labs(x = "Minimum temperature (tenths of degrees C)", y = "Maximum temperature (tenths of degrees C)", 
@@ -387,9 +387,26 @@ clean_noaa %>%
   scale_fill_continuous(breaks = c(10000,30000,50000)) +
   theme_minimal() +
   theme(legend.position = "bottom")
+
+tmax_vs_tmin
 ```
 
 <img src="P8105_hw3_qx2222_files/figure-gfm/unnamed-chunk-16-1.png" width="90%" />
 
 2)  make a plot showing the distribution of snowfall values greater than
     0 and less than 100 separately by year.
+
+``` r
+dist_snowfall = clean_noaa %>%
+  filter(snow>0&snow<100) %>%
+  mutate(year = factor(year)) %>%
+  ggplot(aes(x = snow, y = year, fill = year))+
+  geom_density_ridges(alpha = .5, scale = 2) +
+  labs(x = "Snowfall(mm)", y = "year", title = "the distribution of snowfall values by year")
+
+dist_snowfall  
+```
+
+    ## Picking joint bandwidth of 3.76
+
+<img src="P8105_hw3_qx2222_files/figure-gfm/unnamed-chunk-17-1.png" width="90%" />
