--- a/P8105_hw3_qx2222.md
+++ b/P8105_hw3_qx2222.md
@@ -410,3 +410,15 @@ dist_snowfall
     ## Picking joint bandwidth of 3.76
 
 <img src="P8105_hw3_qx2222_files/figure-gfm/unnamed-chunk-17-1.png" width="90%" />
+
+Finally, combine this two plot into a two-panel plot.
+
+``` r
+final_two_panel = tmax_vs_tmin + dist_snowfall 
+
+final_two_panel
+```
+
+    ## Picking joint bandwidth of 3.76
+
+<img src="P8105_hw3_qx2222_files/figure-gfm/unnamed-chunk-18-1.png" width="90%" />
