--- a/P8105_hw3_qx2222.md
+++ b/P8105_hw3_qx2222.md
@@ -161,8 +161,7 @@ instacart %>%
 1.  Load, tidy, and otherwise wrangle the data. Your final dataset
     should include all originally observed variables and values; have
     useful variable names; include a weekday vs weekend variable; and
-    encode data with reasonable variable classes. Describe the resulting
-    dataset (e.g. what variables exist, how many observations, etc).
+    encode data with reasonable variable classes.
 
 ``` r
 accel_data = read_csv("data/accel_data.csv") %>%
@@ -173,8 +172,7 @@ accel_data = read_csv("data/accel_data.csv") %>%
   arrange(week, day) %>%
   mutate(minute = as.integer(minute)) %>%
   mutate(weekday_or_weekend = if_else(day %in% c("Saturday", "Sunday"), "weekend", "weekday" )) %>%
-  mutate(weekday_or_weekend = factor(weekday_or_weekend)) %>%
-  mutate(hour = minute/60) 
+  mutate(weekday_or_weekend = factor(weekday_or_weekend))
 ```
 
     ## Rows: 35 Columns: 1443
@@ -190,20 +188,29 @@ accel_data = read_csv("data/accel_data.csv") %>%
 accel_data
 ```
 
-    ## # A tibble: 50,400 × 7
-    ##     week day_id day    minute activities weekday_or_weekend   hour
-    ##    <dbl>  <dbl> <chr>   <int>      <dbl> <fct>               <dbl>
-    ##  1     1      1 Friday      1       88.4 weekday            0.0167
-    ##  2     1      1 Friday      2       82.2 weekday            0.0333
-    ##  3     1      1 Friday      3       64.4 weekday            0.05  
-    ##  4     1      1 Friday      4       70.0 weekday            0.0667
-    ##  5     1      1 Friday      5       75.0 weekday            0.0833
-    ##  6     1      1 Friday      6       66.3 weekday            0.1   
-    ##  7     1      1 Friday      7       53.8 weekday            0.117 
-    ##  8     1      1 Friday      8       47.8 weekday            0.133 
-    ##  9     1      1 Friday      9       55.5 weekday            0.15  
-    ## 10     1      1 Friday     10       43.0 weekday            0.167 
+    ## # A tibble: 50,400 × 6
+    ##     week day_id day    minute activities weekday_or_weekend
+    ##    <dbl>  <dbl> <chr>   <int>      <dbl> <fct>             
+    ##  1     1      1 Friday      1       88.4 weekday           
+    ##  2     1      1 Friday      2       82.2 weekday           
+    ##  3     1      1 Friday      3       64.4 weekday           
+    ##  4     1      1 Friday      4       70.0 weekday           
+    ##  5     1      1 Friday      5       75.0 weekday           
+    ##  6     1      1 Friday      6       66.3 weekday           
+    ##  7     1      1 Friday      7       53.8 weekday           
+    ##  8     1      1 Friday      8       47.8 weekday           
+    ##  9     1      1 Friday      9       55.5 weekday           
+    ## 10     1      1 Friday     10       43.0 weekday           
     ## # … with 50,390 more rows
+
+Describe the resulting dataset:
+
+This cleaned dataset has 50400 observations and 6 varibales, such as
+week, day_id, day, minute, activities, weekday_or_weekend. In those
+varibales, week,day_id, day, minute shows the exact time of collected
+data. variable activities shows the number of activity happened in each
+time. Finally, weekday_or_weekend variable we created shows data
+collected in weekday or weekend.
 
 2.  Using your tidied dataset, aggregate across minutes to create a
     total activity variable for each day, and create a table showing
@@ -211,27 +218,26 @@ accel_data
 
 ``` r
 totals_table  = accel_data %>% group_by(day_id) %>%
-  mutate(total = sum(activities)) %>%
-  distinct(week,day,total, weekday_or_weekend) 
+  mutate(total = sum(activities))
 
 totals_table
 ```
 
-    ## # A tibble: 35 × 5
+    ## # A tibble: 50,400 × 7
     ## # Groups:   day_id [35]
-    ##     week day_id day       weekday_or_weekend   total
-    ##    <dbl>  <dbl> <chr>     <fct>                <dbl>
-    ##  1     1      1 Friday    weekday            480543.
-    ##  2     1      2 Monday    weekday             78828.
-    ##  3     1      3 Saturday  weekend            376254 
-    ##  4     1      4 Sunday    weekend            631105 
-    ##  5     1      5 Thursday  weekday            355924.
-    ##  6     1      6 Tuesday   weekday            307094.
-    ##  7     1      7 Wednesday weekday            340115.
-    ##  8     2      8 Friday    weekday            568839 
-    ##  9     2      9 Monday    weekday            295431 
-    ## 10     2     10 Saturday  weekend            607175 
-    ## # … with 25 more rows
+    ##     week day_id day    minute activities weekday_or_weekend   total
+    ##    <dbl>  <dbl> <chr>   <int>      <dbl> <fct>                <dbl>
+    ##  1     1      1 Friday      1       88.4 weekday            480543.
+    ##  2     1      1 Friday      2       82.2 weekday            480543.
+    ##  3     1      1 Friday      3       64.4 weekday            480543.
+    ##  4     1      1 Friday      4       70.0 weekday            480543.
+    ##  5     1      1 Friday      5       75.0 weekday            480543.
+    ##  6     1      1 Friday      6       66.3 weekday            480543.
+    ##  7     1      1 Friday      7       53.8 weekday            480543.
+    ##  8     1      1 Friday      8       47.8 weekday            480543.
+    ##  9     1      1 Friday      9       55.5 weekday            480543.
+    ## 10     1      1 Friday     10       43.0 weekday            480543.
+    ## # … with 50,390 more rows
 
 ``` r
 totals_table %>%
@@ -245,9 +251,15 @@ totals_table %>%
         legend.title = element_blank())
 ```
 
-    ## `geom_smooth()` using method = 'loess' and formula 'y ~ x'
+    ## `geom_smooth()` using method = 'gam' and formula 'y ~ s(x, bs = "cs")'
 
 <img src="P8105_hw3_qx2222_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
+
+From the plot we got, we could see the line showed total activities
+counts on weekday is more stable, compared with the line of weekend.
+Besides, for the total activities counts on weekday has sightly
+increasing trend. But for the total activities counts on weekend has
+sightly decreasing trend.
 
 3.  Accelerometer data allows the inspection activity over the course of
     the day. Make a single-panel plot that shows the 24-hour activity
@@ -257,6 +269,7 @@ totals_table %>%
 
 ``` r
 accel_data %>%
+  mutate(hour = minute/60) %>%
   ggplot(aes(x = hour, y = activities, color = day)) +
   geom_point() +
   geom_line(alpha = .5) +
