add description of created 24-hour activity time single-panel plot

--- a/P8105_hw3_qx2222.md
+++ b/P8105_hw3_qx2222.md
@@ -282,6 +282,13 @@ accel_data %>%
 
 <img src="P8105_hw3_qx2222_files/figure-gfm/unnamed-chunk-11-1.png" width="90%" />
 
+From this single-panel plot that shows the 24-hour activity time courses
+for each day, we could see lower total activities counts on morning time
+(before 5am) each day and higher total activities counts on evening time
+(around 6pm-10pm). Then, from the smooth lines, it also shows total
+activities counts on evening time is greater than other time on most of
+days, especially on Friday.
+
 ### Problem 3
 
 ``` r
