--- a/P8105_hw3_qx2222.Rmd
+++ b/P8105_hw3_qx2222.Rmd
@@ -180,9 +180,6 @@ totals_table %>%
 From the plot we got, we could see the line showed total activities counts on weekday is more stable, compared with the line of weekend. Besides, for the total activities counts on weekday has sightly increasing trend. But for the total activities counts on weekend has sightly decreasing trend.
 
 
-
-
-
 3. Accelerometer data allows the inspection activity over the course of the day. Make a single-panel plot that shows the 24-hour activity time courses for each day and use color to indicate day of the week. Describe in words any patterns or conclusions you can make based on this graph.
 
 
@@ -197,6 +194,7 @@ accel_data %>%
        color = "Day of week")
 ```
 
+From this single-panel plot that shows the 24-hour activity time courses for each day, we could see lower total activities counts on morning time (before 5am) each day and higher total activities counts on evening time (around 6pm-10pm). Then, from the smooth lines, it also shows total activities counts on evening time is greater than other time on most of days, especially on Friday. 
 
 
 ### Problem 3
