--- a/P8105_hw3_qx2222.Rmd
+++ b/P8105_hw3_qx2222.Rmd
@@ -205,10 +205,6 @@ data("ny_noaa")
 ```
 
 
-To that end, write a short description of the dataset, noting the size and structure of the data, describing some key variables, and indicating the extent to which missing data is an issue. Then, do or answer the following (commenting on the results of each):
-
-
-
 1. Do some data cleaning. Create separate variables for year, month, and day. Ensure observations for temperature, precipitation, and snowfall are given in reasonable units. For snowfall, what are the most commonly observed values? Why?
 
 
@@ -226,15 +222,20 @@ clean_noaa
 ```
 
 
+In cleaned ny_noaa dataset, there are `r nrow(clean_noaa)` observations from `r n_distinct(clean_noaa$id)` stations and `r ncol(clean_noaa)` variables from `r min(clean_noaa$year)` to `r max(clean_noaa$year)`. The key varibles includes `r names(clean_noaa)`. For missing data, there are `r sum(is.na(clean_noaa$prcp))` missing data in prcp variable. there are `r sum(is.na(clean_noaa$snow))` missing data in snow variable. there are `r sum(is.na(clean_noaa$snwd))` missing data in snwd column. there are `r sum(is.na(clean_noaa$tmax))` missing data in tmax column.there are `r sum(is.na(clean_noaa$tmin))` missing data in tmin column. 
+
 
 ```{r}
-snowball_values = ny_noaa %>%
+snowfall_values = ny_noaa %>%
   group_by(snow) %>%
-  summarise(snowball_obs = n())%>%
-  arrange(desc(snowball_obs))
+  summarise(snowfall_obs = n())%>%
+  arrange(desc(snowfall_obs))
 
-snowball_values
+snowfall_values
 ```
+
+For snowfall, 0 is the most commonly observed values. Because snowfall always be detected in winter season, however, winter time is only 1/4 time of whole year. Thus, for almost 3/4 year, most snowfall data are 0.
+
 
 
 2. Make a two-panel plot showing the average max temperature in January and in July in each station across years. Is there any observable / interpretable structure? Any outliers?
