--- a/P8105_hw3_qx2222.md
+++ b/P8105_hw3_qx2222.md
@@ -297,11 +297,6 @@ library(p8105.datasets)
 data("ny_noaa")
 ```
 
-To that end, write a short description of the dataset, noting the size
-and structure of the data, describing some key variables, and indicating
-the extent to which missing data is an issue. Then, do or answer the
-following (commenting on the results of each):
-
 1.  Do some data cleaning. Create separate variables for year, month,
     and day. Ensure observations for temperature, precipitation, and
     snowfall are given in reasonable units. For snowfall, what are the
@@ -335,17 +330,25 @@ clean_noaa
     ## 10 US1NYAB0001  2007    11    10    NA    NA    NA    NA    NA
     ## # … with 2,595,166 more rows
 
-``` r
-snowball_values = ny_noaa %>%
-  group_by(snow) %>%
-  summarise(snowball_obs = n())%>%
-  arrange(desc(snowball_obs))
+In cleaned ny_noaa dataset, there are 2595176 observations from 747
+stations and 9 variables from 1981 to 2010. The key varibles includes
+id, year, month, day, prcp, snow, snwd, tmax, tmin. For missing data,
+there are 145838 missing data in prcp variable. there are 381221 missing
+data in snow variable. there are 591786 missing data in snwd column.
+there are 1134358 missing data in tmax column.there are 1134420 missing
+data in tmin column.
 
-snowball_values
+``` r
+snowfall_values = ny_noaa %>%
+  group_by(snow) %>%
+  summarise(snowfall_obs = n())%>%
+  arrange(desc(snowfall_obs))
+
+snowfall_values
 ```
 
     ## # A tibble: 282 × 2
-    ##     snow snowball_obs
+    ##     snow snowfall_obs
     ##    <int>        <int>
     ##  1     0      2008508
     ##  2    NA       381221
@@ -358,6 +361,10 @@ snowball_values
     ##  9    38         9197
     ## 10     3         8790
     ## # … with 272 more rows
+
+For snowfall, 0 is the most commonly observed values. Because snowfall
+always be detected in winter season, however, winter time is only 1/4
+time of whole year. Thus, for almost 3/4 year, most snowfall data are 0.
 
 2.  Make a two-panel plot showing the average max temperature in January
     and in July in each station across years. Is there any observable /
